MPD_sima v0.16.0

 * Update vinstall.py (closes #34)
 * Fixed bug when http client fetches a corrupted cached entry (closes #35)
 * Need at least python 3.6

 -- kaliko <kaliko@azylum.org>  UNRELEASED

MPD_sima v0.16.0.dev0

 * Major MPD client refactoring
 * Refactored random plugin
 * Fixed bug in MPD client reconnection

 -- kaliko <kaliko@azylum.org>  Sat, 16 May 2020 14:49:04 +0200

MPD_sima v0.15.3

 * Improve HTTP client (use persistent connection)
 * Fixed a serious bug in PlayerClient().search_albums()
   "search_albums" method was ignoring some albums when Artist object had
   aliases.

-- kaliko jack <kaliko@azylum.org> Sun, 03 May 2020 16:30:36 +0200

MPD_sima v0.15.2

 * Fixed sqlite sqlite3.OperationalError VACUUM Error
 cf. https://bugs.python.org/issue28518
 * Add option to queue a chosen number of tracks from an album (closes #28)
 * Add option to shuffle tracks in album mode (Thanks Sacha)

-- kaliko jack <kaliko@azylum.org> Thu, 14 Nov 2019 17:41:22 +0100

MPD_sima v0.15.1

 * Fixed mopidy compatibility implementation

-- kaliko jack <kaliko@azylum.org> Tue, 19 Mar 2019 15:14:48 +0100

MPD_sima v0.15.0

 * Remove EchoNest support (Closes #10)
 * Enhanced queuing behavior in random mode (Closes #16)
 * Add option to prevent single & repeat mode to disable queuing (Closes #19)
 * Honor MPC password/host format on command line option 'host'
 * Fixed fuzzy search for short artist names
 * Client side hardcoded one month caching (ugly workaround for #7)
 * Simplified album search
 * Track search aggregates artist name and MusicBrainzID searches
 * Add an undocumented mopidy compatibility configuration option
   Use the boolean option "mopidy_compat" in the sima section
   cf. https://gitlab.com/kaliko/sima/issues/21#

-- kaliko jack <kaliko@azylum.org> Tue, 19 Mar 2019 13:58:49 +0100

MPD_sima v0.14.4

 * Fixed blacklisting for Random plugin (Closes #14)
 * Fixed sensible flavour of random plugin, thanks dnmx (Closes #15)
