@@ -75,9 +75,15 @@ man(1), man(7), http://www.tldp.org/HOWTO/Man-Page/
             <para></para>
             <para></para>
         </refsect2> -->
+        <refsect2 id="tags">
+            <title>File tags queue mode (offline mode).</title>
+            <para>Here is an example of autoqueue using file tags only.</para>
+            <programlisting><xi:include href="tags.cfg" parse="text" />
+            </programlisting>
+        </refsect2>
         <refsect2 id="album">
-            <title>Album queue mode.</title>
-            <para>Here is an example of album queue configuration.</para>
+            <title>Album queue mode using last.fm recommendations (online mode).</title>
+            <para>Here is an example of album queue configuration using online recommendations system.</para>
             <programlisting><xi:include href="album.cfg" parse="text" />
             </programlisting>
         </refsect2>
@@ -206,8 +212,7 @@ man(1), man(7), http://www.tldp.org/HOWTO/Man-Page/
                                 <option>Crop</option> is an utility plugin, it does not queue any tracks (cf. below).<sbr />
                                 <option>Random</option> will queue a track at random if other plugins did not return any tracks.<sbr />
                             </para>
-                            <para>You can add here as many plugins you want,
-                                currently shipping <option>Lastfm</option> only.<sbr />
+                            <para>You can add, combine here as many plugins you want.<sbr />
                                 The priority may be used to order them.
                             </para>
                         </listitem>
@@ -414,10 +419,63 @@ man(1), man(7), http://www.tldp.org/HOWTO/Man-Page/
                 </varlistentry>
             </variablelist>
         </refsect2>
+        <refsect2 id="tags">
+            <title>Tags section</title>
+              <para>Tags plugin's configuration. There is no default configuration for this plugin, it does not work out of the box.</para>
+              <para>
+                This plugin permits offline autoqueuing based on files tags only. Supported tags are
+              <option>'comment'</option>, <option>'date'</option>, <option>'genre'</option>, <option>'label'</option> and
+              <option>'originaldate'</option>. It currently supports single track queuing only, no album mode for this plugin.
+              </para>
+            <para>
+              In addition to supported tags above you can use an MPD filter. Please refer to MPD protocol documentation for more.
+            </para>
+            <para>
+              All entries in this section are ANDed as a single MPD filter to look for titles
+              in the library. Moreover, with tags, comma separated values are also ANDed.<sbr />
+              For instance setting "<option>genre=rock</option>" and
+              "<option>date=1982,1983,1984,1985,1986,1987,1988,1989</option>"
+              will end up looking for track tagged with genre <option>rock</option>
+              and date within 1985 through 1990.<sbr />
+              Using an MPD filter to replace <option>date</option> you can achieve
+              the same with the following setting: "<option>genre=rock</option>" and
+              "<option>filter=(date =~ '198[2-9]')</option>" (provided your MPD server
+              was compiled with libpcre).
+            </para>
+                <varlistentry> <!-- tags -->
+                   <term><option>[tags]</option></term>
+                </varlistentry>
+                <varlistentry> <!-- tags.filter -->
+                    <term><option>filter=</option></term>
+                    <listitem>
+                        <para>You can use here any valid MPD filter as defined in MPD protocol documentation.</para>
+                    </listitem>
+                </varlistentry>
+                <varlistentry> <!-- tags.comment -->
+                    <term><option>comment=</option></term>
+                </varlistentry>
+                <varlistentry> <!-- tags.date -->
+                    <term><option>date=</option></term>
+                </varlistentry>
+                <varlistentry> <!-- tags.genre -->
+                    <term><option>genre=</option></term>
+                </varlistentry>
+                <varlistentry> <!-- tags.label -->
+                    <term><option>label=</option></term>
+                </varlistentry>
+                <varlistentry> <!-- tags.priority -->
+                    <term><option>priority=</option><replaceable>80</replaceable></term>
+                    <listitem>
+                        <para>
+                            Plugin priority
+                        </para>
+                    </listitem>
+                </varlistentry>
+        </refsect2>
     </refsect1>
     <refsect1 id="queue_mode">
         <title>QUEUE MODES</title>
-        <para>&dhpackage; offers different queue modes. All of them pick up
+        <para>&dhpackage; offers different queue modes with lastfm plugin. All of them pick up
             tracks from artists similar to the last track in the queue.</para>
         <para>&dhpackage; tries preferably to chose among unplayed artists or
             at least not recently played artist. Concerning track and album
@@ -467,3 +525,5 @@ man(1), man(7), http://www.tldp.org/HOWTO/Man-Page/
   <xi:include href="feedback.xml" />
   <xi:include href="seealso.xml" />
 </refentry>
+<!-- vim: tabstop=4 softtabstop=4 shiftwidth=4 :
+-->
