@@ -120,6 +120,26 @@ single_disable_queue  = True
 
 ######################### PLUGINS #####################################
 
+[tags]
+## Offline tags queing
+# This plugin has no defaults set
+
+# TAGS, any of the supported tags below
+# type: string
+# default: not set
+# description: 
+comment=
+date=
+genre=
+label=
+originaldate=
+
+# FILTER
+# type: string
+# default: not set
+# description: Forge your own MPD filter (cf MPD protocol documentation)
+filter=
+
 [crop]
 ## CONSUME
 # type: integer
